--- a/apartado(4)/alcauter43.html
+++ b/apartado(4)/alcauter43.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title> informacion </title>
+<title>Alcauter</title>
 </head>
 <body>
-<img src="uu.jpg">
+<img src="https://github.com/Branndon911/ICO_SCRUM_ARCADIA/blob/master/apartado(4)/uu.jpg?raw=true">
 <p> Nombre: Alexis Cruz Alcauter </p>
 <p> Num. Cuenta:313</p>
 <p> Correo:alexiso90@hotmail.com </p>
