--- a/apartado(4)/ap(4.2).html
+++ b/apartado(4)/ap(4.2).html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title>informacion </title>
+<title>Brandon</title>
 </head>
 <body>
-<img src="bb.jpg">
+<img src="https://github.com/Branndon911/ICO_SCRUM_ARCADIA/blob/master/apartado(4)/bb.jpg?raw=true">
 <p>Nombre:Aparicio Ortega Brandon</p>
 <p> Num. Cuenta:313 </p>
 <p> Correo:brannz9@hotmail.com </p>
