Update and rename ap(4.3).html to ernesto42.html

--- a/apartado(4)/ernesto42.html
+++ b/apartado(4)/ernesto42.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title> </title>
+<title>Ernesto</title>
 </head>
 <body>
-<img src="pp.jpg">
+<img src="https://github.com/Branndon911/ICO_SCRUM_ARCADIA/blob/master/apartado(4)/pp.jpg?raw=true.jpg">
 <p> Nombre: Cruz Reyes Edgar Ernesto </p>
 <p> Num. Cuenta:313</p>
 <p> Correo:edgarernestocruzreyes@gmail.com </p>
